--- a/coffe_app/templates/product_form.html
+++ b/coffe_app/templates/product_form.html
@@ -1,4 +1,4 @@
-<form method="POST" enctype="multipart/form-data">
-  {% csrf_token %} {{ form.as_p }}
+<form method="POST" action="{% url 'add_product' %}">
+  {% csrf_token %} {{form.as_p}}
   <button type="submit">Agregar</button>
 </form>
