--- a/coffe_app/templates/product_list.html
+++ b/coffe_app/templates/product_list.html
@@ -91,11 +91,15 @@
         <span class="text-3xl font-bold text-gray-900 dark:text-white"
           >${{ product.price }}</span
         >
-        <a
-          href="{% url 'add_product' %}"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          >Añadir al carrito
-        </a>
+        <form action="{% url 'add_product' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="product" value="{{product.id}}" />
+          <button
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Agregar al pedido
+          </button>
+        </form>
       </div>
     </div>
   </div>
